ceph-base dockerfile: add cypress dependency

--- a/docker/ceph/centos/Dockerfile
+++ b/docker/ceph/centos/Dockerfile
@@ -26,7 +26,7 @@ RUN pip3 install nodeenv
 
 # For dev. mode: run e2e tests.
 RUN dnf install -y https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm \
-    xorg-x11-server-Xvfb \
+    libXScrnSaver xorg-x11-server-Xvfb \
     && dnf clean packages
 
 # SSO deps (install before fedora provisional deps).
