--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
             - ${CEPH2_CUSTOM_BUILD_DIR:-empty_volume}:/build
 
     grafana:
-        image: ${GRAFANA_IMAGE:-grafana/grafana:6.6.2}
+        image: ${GRAFANA_IMAGE:-ceph/ceph-grafana}
         container_name: grafana
         hostname: grafana
         ports: ['${GRAFANA_HOST_PORT:-3000}:3000']
@@ -81,7 +81,7 @@ services:
             - ./docker/grafana/provisioning:/etc/grafana/provisioning:Z
             - ${CEPH_REPO_DIR}/monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards/ceph:Z
         environment:
-            - GF_INSTALL_PLUGINS=grafana-piechart-panel 1.4.0,vonage-status-panel 1.0.9
+            - GF_SECURITY_ALLOW_EMBEDDING=true
 
     prometheus:
         image: ${PROMETHEUS_IMAGE:-prom/prometheus:v2.7.2}
