Update keycloak service

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ NODE_EXPORTER_HOST_PORT=9100
 #NODE_EXPORTER_IMAGE=
 ALERTMANAGER_HOST_PORT=9093
 #ALERTMANAGER_IMAGE=
+KEYCLOAK_HOST_HTTP_PORT=8080
+KEYCLOAK_HOST_HTTPS_PORT=8443
+#KEYCLOAK_IMAGE=
 
 CEPH2_IMAGE=rhcsdashboard/ceph-rpm:master
 CEPH2_REPO_DIR=/path/to/your/local/ceph2
