nautilus images: install latest pip version that supports python 2.
See:
https://pip.pypa.io/en/latest/development/release-process/#python-2-support

--- a/docker/ceph/nautilus/Dockerfile
+++ b/docker/ceph/nautilus/Dockerfile
@@ -31,7 +31,7 @@ RUN wget "https://kojipkgs.fedoraproject.org//packages/jericho-html/3.2/5.fc19/n
       "https://kojipkgs.fedoraproject.org//packages/ditaa/0.9/10.r74.fc20/noarch/ditaa-0.9-10.r74.fc20.noarch.rpm" && \
       rpm -vih jericho-html-3.2-5.fc19.noarch.rpm ditaa-0.9-10.r74.fc20.noarch.rpm
 
-RUN pip install -U pip \
+RUN pip install pip==20.3 \
     && pip install tox==2.9.1
 
 # SSO (after installing xmlsec deps).
