github build-ceph: add pacific release; refactoring

--- a/docker/ceph/rpm/Dockerfile
+++ b/docker/ceph/rpm/Dockerfile
@@ -10,6 +10,7 @@ RUN dnf copr enable -y ktdreyer/ceph-el${CENTOS_VERSION}
 RUN sed -i 's/gpgcheck=1/gpgcheck=0/' /etc/dnf/dnf.conf
 
 ARG REPO_URL
+ARG CEPH_RELEASE=master
 COPY rpm/set-ceph-repo.sh /root
 RUN /root/set-ceph-repo.sh
 RUN dnf install -y ceph ceph-mgr-dashboard ceph-mgr-diskprediction-local ceph-radosgw rbd-mirror \
