--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,18 +54,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        branch: [master, octopus, nautilus]
+        branch: [master, pacific, octopus, nautilus]
         name: [ceph, ceph-rpm]
         include:
           - name: ceph
             dir: ceph
           - name: ceph-rpm
             dir: ceph/rpm
+          - branch: nautilus
+            branch_dir: nautilus
     steps:
     - name: Checkout
       uses: actions/checkout@master
     - name: Build
-      run: docker build -t docker.io/rhcsdashboard/${{ matrix.name }}:${{ matrix.branch }} -f docker/${{ matrix.dir }}/${{ matrix.branch }}/Dockerfile ./docker/ceph
+      run: docker build -t docker.io/rhcsdashboard/${{ matrix.name }}:${{ matrix.branch }} -f docker/${{ matrix.dir }}/${{ matrix.branch_dir}}/Dockerfile ./docker/ceph --build-arg CEPH_RELEASE=${{ matrix.branch }} --build-arg VCS_BRANCH=${{ matrix.branch }}
     - name: Push
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
