--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -9,15 +9,19 @@ frontend dashboard_front
   mode http
   bind *:80
   option httplog
-  default_backend dashboard_back
+  redirect scheme https code 301 if !{ ssl_fc }
 
-backend dashboard_back
-  mode http
+frontend dashboard_front_ssl
+  mode tcp
+  bind *:443
+  option tcplog
+  default_backend dashboard_back_ssl
+
+backend dashboard_back_ssl
+  mode tcp
   balance source
   stick-table type ip size 200k expire 30m
   stick on src
-  option http-server-close
-  option forwardfor
   option httpchk GET /
   http-check expect status 200
-  server x localhost:11000 check
+  server x localhost:11000 check-ssl check verify none
